2005-09-06  Saurabh Verma  <saurabh.verma@codito.com>

	PR target/8973
	* config/arc/arc.c (arc_output_function_epilogue): Update flags while
	returning from an interrupt handler.

2005-09-06  Saurabh Verma  <saurabh.verma@codito.com>

	PR target/8972
	* config/arc/arc.c (output_shift): Add check for loop count when
	optimizing.

2005-09-06  Steven Bosscher  <stevenb@suse.de>

	* tree-ssa-phiopt.c (conditional_replacement): Construct proper SSA
	form manually.
	(abs_replacement): Likewise.
	(pass_phiopt): Remove TODO_update_ssa.

2005-09-06  Jakub Jelinek  <jakub@redhat.com>

	PR c/23075
	* c-typeck.c (c_finish_return): Set TREE_NO_WARNING on RETURN_EXPR
	if "return with no value, in function returning non-void" warning
	has been issued.
	* tree-cfg.c (execute_warn_function_return): Don't look at
	RETURN_EXPRs with TREE_NO_WARNING set.

	PR target/22362
	* config/i386/i386.c (ix86_function_regparm): Make sure automatic regparm
	for internal functions doesn't use registers used by global registers
	variables.  Use fewer register parameters if there are global register
	variables.

2005-09-06  Olivier Hainque  <hainque@adacore.com>
	    Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/14997
	* expr.c (expand_expr_real) <normal_inner_ref>: Force op0 to mem
	when we would be extracting outside its bit span (bitpos+bitsize
	larger than its mode), possible with some VIEW_CONVERT_EXPRs from
	Ada unchecked conversions.

2005-09-06  Steven Bosscher  <stevenb@suse.de>

	* tree-ssa-pre.c (try_look_through_load): New function.
	(compute_avail): Use it to try to look through loads for some
	more useful expressions.

2005-09-06  Saurabh Verma  <saurabh.verma@codito.com>

	* simplify-rtx.c (simplify_binary_operation_1): Correct the 
	condition for detecting cases like (a&a) and (a^a).

2005-09-06  Keith Besaw  <kbesaw@us.ibm.com>

	* common.opt: Add option ftree-vect-loop-version.
	* params.def: Add --param vect-max-version-checks.